# ansible-role-nomad

./: .copier-answers.yml  .markdownlintignore  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  Makefile  README.md  compass.yaml  pyproject.toml  tox.ini
.github/workflows/: molecule.yml  pre-commit.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  prepare.yml  verify.yml
tasks/: assert.yml  main.yml
templates/: client.hcl.j2  nomad.hcl.j2  server.hcl.j2
