[tool.poetry]
name = "ansible-role-nomad"
version = "2.8.0"
description = "Install and configure Nomad with Ansible."
authors = ["Remerge GmbH <sre@remerge.io>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.5.9"
pylint = "^2.17.4"
tox = "^4.5.1"
molecule = {extras = ["docker"], version = "^5.0.1"}
ansible-lint = { version = "^6.16.2", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
