[tool.poetry]
name = "ansible-role-nomad"
version = "0.0.0"
description = "Ansible Role for Nomad"
authors = ["Remerge GmbH <core@remerge.io>"]

[tool.poetry.dependencies]
python = "^3.10, < 3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
pylint = "^3.1.0"
tox = "^4.14.2"
molecule = { extras = ["docker"], version = "^24.2.1" }
ansible-lint = { version = "^24.2.2", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
